--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,9 @@ main: me.frxq15.customtitles.CustomTitles
 api-version: 1.17
 authors: [ Frxq15 ]
 description: Custom titles plugin
+
+commands:
+  titles:
+    aliases: [title, titlesgui]
+    usage: /<command>
+    description: titles command
